--- a/src/App.css
+++ b/src/App.css
@@ -1,19 +1,124 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
 
-*{
+
+html, body{
+  margin:0;
   padding:0;
-  margin: 0;
-  box-sizing: border-box;
-}
-
-.App {
-  text-align: center;
+  height:100vh; /* needed for container min-height */  
   font-family: 'Montserrat', sans-serif;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  background-color: #353B3F;
+  scroll-behavior: smooth;
 }
 
-#hero{
-  width: 100%;
-  height: 80vh;
-  background-color: rgba(0, 0, 0, 0.582); 
+
+h1,h2,h3,p{
+  margin: 0px;
+  margin :15px 0;
+  color: #4B4B4B; 
+}
+a:link { text-decoration: none; }
+h1{
+  font-size: 80px;
+  font-weight: 500;
 }
 
+h3{
+  font-size: 15px;
+  font-weight: 150;
+}
+p {
+  text-align: justify;
+  padding-top: 10px;
+  font-size: 0.95rem;
+  line-height: 150%;
+}
+.container{
+  display: flex;
+}
+.hero{
+  display: flex;
+  background-image: none;
+  min-height: 95vh;
+  justify-content: center;
+  display: flex;
+}
+.hero-card{
+  display: flex;
+  background-color:#f9f7f6;
+  align-self: center;
+  padding: 30px;
+  min-height: 400px;
+  border-radius: 1em;
+  flex-direction: column;
+  max-width: 45%;
+
+  -webkit-box-shadow: 10px 10px 93px 0px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 10px 10px 93px 0px rgba(0, 0, 0, 0.75);
+  box-shadow: 10px 10px 93px 0px rgba(0, 0, 0, 0.75);
+  /* margin: 200px auto; */
+
+  /* justify-content: stretch; */
+}
+.search-form{
+  display: flex;
+  align-items: center;
+}
+
+.combobox{
+  display: flex;
+  flex:auto;
+  /* width: 350px ; */
+}
+
+input,
+.comboinput{
+  padding: 12px 4px ;
+  margin: 0 1px;
+  border-radius: 0.25rem;
+  border:1;
+  flex:auto;
+  /* width: 350px ; */
+}
+
+.result{
+  display: flex;
+  flex: 1;
+  min-height: 90vh;
+}
+.loader{
+  margin: auto;
+  align-self: auto;
+}
+.main-footer {
+  display: flex;
+	background: #d9e4ea;
+	padding: 1.5em 2em;
+	margin-top: 30px;
+  font-size: smaller;
+}
+.footer-inner{
+  max-width: 50%;
+  justify-content: center;
+  align-self: center;
+  
+}
+.socials {
+  /* display: flex; */
+  /* margin-right: 10px; */
+  justify-content: center;
+  align-items: center;
+}
+.socials > li {
+  margin: 0 20px;
+}
+
+button{
+  align-self:stretch;
+  /* margin-left: 20px; */
+  padding: 4px;
+  border:0;
+  border-radius: .75em;
+}
